# per4mance

./: .gitignore  .pre-commit-config.yaml  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  manage.py  pyproject.toml  setup.cfg
.github/workflows/: deploy.yml  docker-image.yml
migrations/: env.py
migrations/versions/: 42ecd75e599d_.py  49e791063766_.py  51f7a62dd6ac_.py  64f39352e304_.py  6920d892aeb0_first_migration.py  6caf48b079d6_initial.py  a20435488d9b_.py  c3d97607f061_first_migration.py  ca9dcd553561_.py  dbd294f658e2_.py
per4mance/: __init__.py  config.py  endpoints.py  models.py
per4mance/core/: auth.py  utils.py
per4mance/core/utils/: auth.py  db.py
per4mance/course/: __init__.py  endpoints.py  schemas.py  services.py
per4mance/user/: __init__.py  auth.py  endpoints.py  schemas.py  services.py
scripts/: start-dev.sh
secrets/: .env.dev
src/: __init__.py
src/core/: auth.py  utils.py
src/course/: __init__.py  endpoints.py  schemas.py  services.py
src/user/: __init__.py  endpoints.py  services.py
