[tool.poetry]
name = "per4mance"
version = "0.1.0"
description = "PER4MANCE Group Works Evaluating Solution"
authors = ["JunHCha <quffl9612@naver.com>"]

[tool.poetry.dependencies]
python = "3.9.1"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
SQLAlchemy = "^1.4.27"
alembic = "^1.7.5"
psycopg2-binary = "^2.9.2"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.11b1"
mypy = "^0.910"
isort = "^5.10.1"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
