[tool.poetry]
name = "per4mance"
version = "0.1.0"
description = "PER4MANCE Group Works Evaluating Solution"
authors = ["JunHCha <quffl9612@naver.com>"]

[tool.poetry.dependencies]
python = "3.9.1"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
SQLAlchemy = "^1.4.27"
alembic = "^1.7.5"
python-multipart = "^0.0.5"
asyncpg = "^0.25.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"

[tool.poetry.extras]
asyncio = ["SQLAlchemy"]
cryptography = ["python-jose"]
bcrypt = ["passlib"]

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.11b1"
mypy = "^0.910"
isort = "^5.10.1"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
